--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Guide App</title>
-    <!-- Google Font -->
+    <title>Movie Search App</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
       rel="stylesheet"
     />
-    <!-- Stylesheet -->
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container"> 
       <div class="search-container">
         <input
           type="text"
-          placeholder="Enter movie name heree..."
+          placeholder="Enter movie name here..."
           id="movie-name"
-          value="The Dark Knight"
+          value=""
         />
         <button id="search-btn">Search</button>
       </div>
+      <div id="loading"></div>
       <div id="result"></div>
     </div>
     <script src="./index.js"></script>
